[project]
name = "abco_customization"
authors = [
    { name = "zikpro", email = "shoaib@zikpro.com"}
]
description = "abco"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.frappe]
frappe_version = ">=16.0.0,<17.0.0"
